--- a/styles/main.scss
+++ b/styles/main.scss
@@ -6,6 +6,7 @@
 /*PAGES*/
 
 @import 'pages/home';
+@import 'pages/perfil';
 
 
 /*COMPONENTS*/
@@ -15,5 +16,4 @@
 
 /*LAYOUT*/
 
-//@import 'layout/header';
-//@import 'layout/footer';
+@import 'layout/header';
