--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -362,47 +362,139 @@ body {
 }
 #perfil-container .fondo {
   width: 100%;
-  height: 900px;
-  background-image: url(../../img/Puntos_Amarillo_fondo.png);
+  height: auto;
+  background-image: url(../../img/fondosNiveles/nivel1.png);
   background-position: center;
   background-size: cover;
-  margin-top: 35px;
+  margin-top: 20px;
   border: 5px solid #000000;
+}
+#perfil-container .columns {
+  width: 100%;
+  height: auto;
+  display: flex;
+  flex-direction: row;
 }
 #perfil-container .columns .columna-izquierda {
   display: flex;
-  width: 25%;
-  background-color: #fdff70;
+  width: 15%;
+  background-color: #fede2c;
+  border-right: 6px solid #000000;
 }
 #perfil-container .columns .columna-central {
-  width: 50%;
+  width: 55%;
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+}
+#perfil-container .columns .columna-central .datos-usuario {
+  position: relative;
+  top: -55px;
+  transform: skewy(-7deg);
+}
+#perfil-container .columns .columna-central .datos-usuario #nombre-usuario {
+  margin: 0;
+  padding: 40px 10px 1px 10px;
+  font-family: "adventure";
+  font-size: 120px;
+  color: #000000;
+  background-image: url(../../img/fondosNiveles/fondoNombre.jpg);
+  background-position: center;
+  background-size: cover;
+  text-shadow: 10px 5px 0 #93939369;
+  border-bottom: 8px solid #000000;
+  border-top: 8px solid #000000;
+  border-right: 8px solid #000000;
+}
+#perfil-container .columns .columna-central .datos-usuario .img-puntaje-usuario {
+  width: 300px;
+  height: auto;
+  position: absolute;
+  transform: translate(410px, -160px);
+}
+#perfil-container .columns .columna-central .datos-usuario #puntaje-usuario {
+  position: absolute;
+  font-family: "para burbujas";
+  font-size: 30px;
+  color: #000000;
+  text-shadow: 3px 3px 0 #0000005e;
+  transform: translate(415%, -290%);
+  z-index: 1;
+}
+#perfil-container .columns .columna-central .datos-usuario .contenedor-nivel {
+  position: absolute;
+  transform: translateY(-38%);
+  left: 40%;
+  width: 160px;
+  height: 45px;
+  background-color: white;
+  border: 2px solid #000000;
+}
+#perfil-container .columns .columna-central .datos-usuario .contenedor-nivel #nivel-usuario {
+  font-family: "para burbujas";
+  position: absolute;
+  margin: 5px;
+  color: #000000;
+  text-shadow: 3px 2px 0 #00000038;
+  font-size: 30px;
 }
 #perfil-container .columns .columna-derecha {
   width: 25%;
   display: flex;
   flex-direction: column;
 }
-#perfil-container .columns .columna-derecha .burbujas-seguidores .numero-siguiendo {
+#perfil-container .columns .columna-derecha .burbujas-seguidores {
+  position: relative;
+  height: 250px;
+}
+#perfil-container .columns .columna-derecha .burbujas-seguidores .numero-seguidores {
   position: absolute;
   font-family: "para burbujas";
-  font-size: 20px;
+  font-size: 45px;
+  transform: translate(600%, 185%);
+  z-index: 1;
+  text-shadow: 3px 1px 0 #8080807a;
 }
 #perfil-container .columns .columna-derecha .burbujas-seguidores h3 {
   position: absolute;
   font-family: "para burbujas";
-  font-size: 20px;
-}
-#perfil-container .columns .columna-derecha .burbujas-seguidores .img-siguiendo {
-  width: 350px;
-  position: relative;
+  font-size: 45px;
+  transform: translate(42%, 200%);
+  z-index: 1;
+  text-shadow: 6px -5px 0 #8080807a;
 }
 #perfil-container .columns .columna-derecha .burbujas-seguidores .img-te-siguen {
-  width: 350px;
-  position: relative;
+  width: 98%;
+  position: absolute;
 }
-#perfil-container .burbuja {
-  width: 50px;
-  height: 50px;
+#perfil-container .columns .columna-derecha .burbujas-seguidos {
+  position: relative;
+  height: 250px;
+  background-image: url(../);
+  background-position: center;
+  background-size: cover;
+}
+#perfil-container .columns .columna-derecha .burbujas-seguidos .numero-que-sigues {
+  position: absolute;
+  font-family: "para burbujas";
+  font-size: 45px;
+  position: absolute;
+  transform: translate(600%, 185%);
+  z-index: 1;
+  text-shadow: 3px 1px 0 #8080807a;
+}
+#perfil-container .columns .columna-derecha .burbujas-seguidos h3 {
+  position: absolute;
+  font-family: "para burbujas";
+  font-size: 45px;
+  position: absolute;
+  transform: translate(42%, 200%);
+  z-index: 1;
+  text-shadow: 6px -5px 0 #8080807a;
+}
+#perfil-container .columns .columna-derecha .burbujas-seguidos .img-siguiendo {
+  width: 98%;
+  position: absolute;
 }
 
 /*COMPONENTS*/
@@ -410,7 +502,7 @@ body {
 /*------------HEADER-------------------*/
 header {
   width: 100%;
-  height: 180px;
+  height: 170px;
   display: flex;
   justify-content: center;
   background-color: #c052ff;
@@ -423,6 +515,7 @@ header .logotipo {
   border: 2px solid #000000;
   background-color: #ffffffde;
   margin-left: 30px;
+  z-index: 1;
 }
 header .logotipo .contenedor-imagen {
   width: 200px;
@@ -435,14 +528,14 @@ header .logotipo .contenedor-imagen {
 }
 header h1 {
   font-family: "adventure";
-  font-size: 180px;
+  font-size: 175px;
   color: white;
   text-shadow: 6px 9px 0 #000000;
   margin: 0;
 }
 
 #notificaciones {
-  position: fixed;
+  position: absolute;
   top: 150px;
   left: 10px;
 }
@@ -453,6 +546,18 @@ header h1 {
   border-radius: 50%;
   box-shadow: 4px 2px 2px white;
   border: 2px solid #000000;
+}
+#notificaciones #notificaciones-actualizadas {
+  width: 140px;
+  height: auto;
+  color: white;
+  background-color: #e7006c;
+  border: 5px solid #000000;
+  padding: 10px;
+  z-index: 1;
+}
+#notificaciones .lista-notificaciones {
+  visibility: hidden;
 }
 
 /*# sourceMappingURL=main.css.map */
