--- a/styles/layout/_header.scss
+++ b/styles/layout/_header.scss
@@ -3,7 +3,7 @@
 
 header {
     width: 100%;
-    height: 180px;
+    height: 170px;
     display: flex;
     justify-content: center;
     background-color: $background-header-color;
@@ -17,6 +17,8 @@ header {
         border: 2px solid $border-color;
         background-color: #ffffffde;
         margin-left: 30px;
+        z-index: 1;
+
         .contenedor-imagen {
             width: 200px;
             height: 200px;
@@ -40,7 +42,7 @@ header {
 
 }
 #notificaciones {
-    position: fixed;
+    position: absolute;
     top: 150px;
     left: 10px;
          
@@ -52,6 +54,19 @@ header {
         box-shadow: 4px 2px 2px white;
         border: 2px solid $border-color;
 
+    }
+    #notificaciones-actualizadas {
+        width: 140px;
+        height: auto;
+        color: white;
+        background-color: #e7006c; 
+        border: 5px solid $border-color;
+        padding: 10px;
+        z-index: 1;
+
+    }
+    .lista-notificaciones {
+        visibility: hidden;
     }
 
 }
