--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -360,7 +360,7 @@ body {
   display: flex;
   flex-direction: row;
 }
-#perfil-container .fondo {
+#perfil-container #fondo {
   width: 100%;
   height: auto;
   background-image: url(../../img/fondosNiveles/nivel1.png);
@@ -377,12 +377,13 @@ body {
 }
 #perfil-container .columns .columna-izquierda {
   display: flex;
-  width: 15%;
-  background-color: #fede2c;
+  width: 20%;
+  background-color: white;
   border-right: 6px solid #000000;
+  box-shadow: 0px 10px 19px 0px rgba(0, 0, 0, 0.75);
 }
 #perfil-container .columns .columna-central {
-  width: 55%;
+  width: 60%;
   display: flex;
   flex-direction: column;
   overflow: hidden;
@@ -391,6 +392,7 @@ body {
   position: relative;
   top: -55px;
   transform: skewy(-7deg);
+  box-shadow: 0px 10px 19px 0px rgba(0, 0, 0, 0.75);
 }
 #perfil-container .columns .columna-central .datos-usuario #nombre-usuario {
   margin: 0;
@@ -418,17 +420,18 @@ body {
   font-size: 30px;
   color: #000000;
   text-shadow: 3px 3px 0 #0000005e;
-  transform: translate(415%, -290%);
+  transform: translate(374%, -270%);
   z-index: 1;
 }
 #perfil-container .columns .columna-central .datos-usuario .contenedor-nivel {
   position: absolute;
   transform: translateY(-38%);
-  left: 40%;
+  left: 30%;
   width: 160px;
   height: 45px;
   background-color: white;
   border: 2px solid #000000;
+  box-shadow: 0px 10px 19px 0px rgba(0, 0, 0, 0.75);
 }
 #perfil-container .columns .columna-central .datos-usuario .contenedor-nivel #nivel-usuario {
   font-family: "para burbujas";
@@ -439,62 +442,156 @@ body {
   font-size: 30px;
 }
 #perfil-container .columns .columna-derecha {
-  width: 25%;
+  display: flex;
+  width: 20%;
+  height: 500px;
+  padding-left: 20px;
+  background-color: white;
+  border-left: 6px solid #000000;
+  box-shadow: 0px 10px 19px 0px rgba(0, 0, 0, 0.75);
+}
+#perfil-container .columns .columna-derecha .contenedor-burbujas {
   display: flex;
   flex-direction: column;
+  width: 100%;
+  height: 500px;
+  background-color: #1cc763;
+  border-left: 6px solid #000000;
 }
 #perfil-container .columns .columna-derecha .burbujas-seguidores {
   position: relative;
   height: 250px;
+  cursor: pointer;
 }
 #perfil-container .columns .columna-derecha .burbujas-seguidores .numero-seguidores {
   position: absolute;
+  top: 20%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   font-family: "para burbujas";
-  font-size: 45px;
-  transform: translate(600%, 185%);
+  font-size: 35px;
   z-index: 1;
-  text-shadow: 3px 1px 0 #8080807a;
+  text-shadow: 4px 4px 0 #8080807a;
 }
 #perfil-container .columns .columna-derecha .burbujas-seguidores h3 {
   position: absolute;
+  top: 28%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   font-family: "para burbujas";
-  font-size: 45px;
-  transform: translate(42%, 200%);
+  font-size: 25px;
   z-index: 1;
-  text-shadow: 6px -5px 0 #8080807a;
+  text-shadow: 4px 4px 0 #8080807a;
 }
 #perfil-container .columns .columna-derecha .burbujas-seguidores .img-te-siguen {
-  width: 98%;
+  width: 75%;
   position: absolute;
+  top: 30%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
-#perfil-container .columns .columna-derecha .burbujas-seguidos {
-  position: relative;
-  height: 250px;
-  background-image: url(../);
+#perfil-container .columns .columna-derecha .contenedor-seguidores {
+  padding: 20px 40px;
+  position: fixed;
+  z-index: 2;
+  background-color: white;
+  background-image: url(../../img/fondosNiveles/fondoSeguidores.png);
   background-position: center;
   background-size: cover;
+  -webkit-box-shadow: 0px 10px 19px 0px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 0px 10px 19px 0px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 10px 19px 0px rgba(0, 0, 0, 0.75);
+  border: 5px solid #000000;
+  opacity: 0;
+  top: 0%;
+  transition: 0.5s;
 }
-#perfil-container .columns .columna-derecha .burbujas-seguidos .numero-que-sigues {
-  position: absolute;
+#perfil-container .columns .columna-derecha .contenedor-seguidores .cerrar {
+  float: right;
+  margin-left: 45px;
+  font-size: 20px;
+  cursor: pointer;
+}
+#perfil-container .columns .columna-derecha .contenedor-seguidores {
   font-family: "para burbujas";
-  font-size: 45px;
-  position: absolute;
-  transform: translate(600%, 185%);
-  z-index: 1;
-  text-shadow: 3px 1px 0 #8080807a;
+  color: #000000;
+  font-size: 20px;
+  margin: 0px 80px 13px 0px;
+  text-align: left;
 }
-#perfil-container .columns .columna-derecha .burbujas-seguidos h3 {
+#perfil-container .columns .columna-derecha .seguidores-visible {
+  opacity: 1;
+  top: 20%;
+  left: 50%;
+  visibility: visible;
+}
+#perfil-container .columns .columna-derecha .burbujas-siguiendo {
+  position: relative;
+  width: 100%;
+  height: auto;
+  cursor: pointer;
+}
+#perfil-container .columns .columna-derecha .burbujas-siguiendo .numero-que-sigues {
   position: absolute;
+  top: 10%;
+  left: 50%;
+  transform: translate(-50%, -80%);
   font-family: "para burbujas";
-  font-size: 45px;
-  position: absolute;
-  transform: translate(42%, 200%);
+  font-size: 35px;
   z-index: 1;
-  text-shadow: 6px -5px 0 #8080807a;
+  text-shadow: 4px 4px 0 #8080807a;
 }
-#perfil-container .columns .columna-derecha .burbujas-seguidos .img-siguiendo {
-  width: 98%;
+#perfil-container .columns .columna-derecha .burbujas-siguiendo h3 {
   position: absolute;
+  top: 28%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-family: "para burbujas";
+  font-size: 25px;
+  z-index: 1;
+  text-shadow: 4px 4px 0 #8080807a;
+}
+#perfil-container .columns .columna-derecha .burbujas-siguiendo .img-siguiendo {
+  width: 75%;
+  position: absolute;
+  top: 30%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+#perfil-container .columns .columna-derecha .contenedor-siguiendo {
+  padding: 20px 40px;
+  position: fixed;
+  z-index: 2;
+  background-color: white;
+  background-image: url(../../img/fondosNiveles/fondoSiguiendo.png);
+  background-position: center;
+  background-size: cover;
+  -webkit-box-shadow: 0px 10px 19px 0px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 0px 10px 19px 0px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 10px 19px 0px rgba(0, 0, 0, 0.75);
+  border: 5px solid #000000;
+  opacity: 0;
+  top: 0%;
+  transition: 0.5s;
+}
+#perfil-container .columns .columna-derecha .contenedor-siguiendo .cerrar {
+  float: right;
+  margin-left: 45px;
+  font-size: 20px;
+  cursor: pointer;
+}
+#perfil-container .columns .columna-derecha .contenedor-siguiendo {
+  font-family: "para burbujas";
+  color: #000000;
+  font-size: 20px;
+  margin: 0px 80px 13px 0px;
+  text-align: left;
+}
+#perfil-container .columns .columna-derecha .siguiendo-visible {
+  opacity: 1;
+  top: 20%;
+  left: 50%;
+  visibility: visible;
 }
 
 /*COMPONENTS*/
@@ -513,6 +610,7 @@ header .logotipo {
   height: 210px;
   border-radius: 50%;
   border: 2px solid #000000;
+  box-shadow: 0px 10px 19px 0px #000000bf;
   background-color: #ffffffde;
   margin-left: 30px;
   z-index: 1;
@@ -536,8 +634,8 @@ header h1 {
 
 #notificaciones {
   position: absolute;
-  top: 150px;
-  left: 10px;
+  top: 127px;
+  left: 7px;
 }
 #notificaciones i {
   font-size: 80px;
@@ -546,18 +644,54 @@ header h1 {
   border-radius: 50%;
   box-shadow: 4px 2px 2px white;
   border: 2px solid #000000;
+  box-shadow: 0px 10px 19px 0px #000000bf;
+  cursor: pointer;
 }
 #notificaciones #notificaciones-actualizadas {
-  width: 140px;
+  width: 145px;
   height: auto;
   color: white;
   background-color: #e7006c;
   border: 5px solid #000000;
+  box-shadow: 0px 10px 19px 0px rgba(0, 0, 0, 0.75);
   padding: 10px;
+  padding-bottom: 20px;
   z-index: 1;
+  opacity: 1;
 }
 #notificaciones .lista-notificaciones {
+  display: none;
   visibility: hidden;
+  opacity: 0;
+}
+
+.navegador-general {
+  display: flex;
+  flex-direction: column;
+  width: 90%;
+  background-color: #fede2c;
+  border-right: 6px solid #000000;
+}
+.navegador-general .boton-nav {
+  width: 80%;
+  height: auto;
+  margin: 15px 12px 13px 12px;
+  background-color: white;
+  border: 2px solid #000000;
+  box-shadow: 0px 10px 19px 0px #000000bf;
+  cursor: pointer;
+}
+.navegador-general .boton-nav h2 {
+  font-family: "para burbujas";
+  font-size: 22px;
+  color: #000000;
+  text-shadow: 3px 2px 0 #00000038;
+  margin: 7px 5px;
+  text-align: center;
+}
+.navegador-general .boton-nav a {
+  text-decoration: none;
+  color: #000000;
 }
 
 /*# sourceMappingURL=main.css.map */
