--- a/styles/layout/_header.scss
+++ b/styles/layout/_header.scss
@@ -15,6 +15,7 @@ header {
         height: 210px;
         border-radius: 50%;
         border: 2px solid $border-color;
+        box-shadow: 0px 10px 19px 0px #000000bf;
         background-color: #ffffffde;
         margin-left: 30px;
         z-index: 1;
@@ -43,8 +44,10 @@ header {
 }
 #notificaciones {
     position: absolute;
-    top: 150px;
-    left: 10px;
+    top: 127px;
+    left: 7px;
+    
+
          
     i {
         font-size: 80px;
@@ -53,20 +56,26 @@ header {
         border-radius: 50%;
         box-shadow: 4px 2px 2px white;
         border: 2px solid $border-color;
+        box-shadow: 0px 10px 19px 0px #000000bf;
+        cursor: pointer;
 
     }
     #notificaciones-actualizadas {
-        width: 140px;
+        width: 145px;
         height: auto;
         color: white;
         background-color: #e7006c; 
         border: 5px solid $border-color;
+        box-shadow: 0px 10px 19px 0px rgba(0,0,0,0.75);
         padding: 10px;
+        padding-bottom: 20px;
         z-index: 1;
-
+        opacity: 1;
     }
     .lista-notificaciones {
+        display: none;
         visibility: hidden;
+        opacity: 0;   
     }
 
 }
