--- a/css/main.css
+++ b/css/main.css
@@ -381,13 +381,12 @@ body {
 }
 #perfil-container .columns .columna-izquierda {
   display: flex;
-  width: 20%;
-  background-color: white;
+  width: 15%;
+  background-color: #wh;
   border-right: 6px solid #000000;
-  box-shadow: 0px 10px 19px 0px rgba(0, 0, 0, 0.75);
 }
 #perfil-container .columns .columna-central {
-  width: 60%;
+  width: 55%;
   display: flex;
   flex-direction: column;
   overflow: hidden;
@@ -396,7 +395,6 @@ body {
   position: relative;
   top: -55px;
   transform: skewy(-7deg);
-  box-shadow: 0px 10px 19px 0px rgba(0, 0, 0, 0.75);
 }
 #perfil-container .columns .columna-central .datos-usuario #nombre-usuario {
   margin: 0;
@@ -404,7 +402,7 @@ body {
   font-family: "adventure";
   font-size: 120px;
   color: #000000;
-  background-image: url(../../img/fondosNiveles/fondoNombrePerfil.jpg);
+  background-image: url(../../img/fondosNiveles/fondoNombre.jpg);
   background-position: center;
   background-size: cover;
   text-shadow: 10px 5px 0 #93939369;
@@ -435,7 +433,6 @@ body {
   height: 45px;
   background-color: white;
   border: 2px solid #000000;
-  box-shadow: 0px 10px 19px 0px rgba(0, 0, 0, 0.75);
 }
 #perfil-container .columns .columna-central .datos-usuario .contenedor-nivel #nivel-usuario {
   font-family: "shaka-pow";
@@ -446,21 +443,10 @@ body {
   font-size: 30px;
 }
 #perfil-container .columns .columna-derecha {
-  display: flex;
-  width: 20%;
+  width: 25%;
   height: 500px;
-  padding-left: 20px;
-  background-color: white;
-  border-left: 6px solid #000000;
-  box-shadow: 0px 10px 19px 0px rgba(0, 0, 0, 0.75);
-}
-#perfil-container .columns .columna-derecha .contenedor-burbujas {
   display: flex;
   flex-direction: column;
-  width: 100%;
-  height: 500px;
-  background-color: #1cc763;
-  border-left: 6px solid #000000;
 }
 #perfil-container .columns .columna-derecha .burbujas-seguidores {
   position: relative;
@@ -469,30 +455,23 @@ body {
 }
 #perfil-container .columns .columna-derecha .burbujas-seguidores .numero-seguidores {
   position: absolute;
-  top: 20%;
-  left: 50%;
-  transform: translate(-50%, -50%);
   font-family: "shaka-pow";
-  font-size: 35px;
+  font-size: 40px;
+  transform: translate(600%, 185%);
   z-index: 1;
-  text-shadow: 4px 4px 0 #8080807a;
+  text-shadow: 3px 1px 0 #8080807a;
 }
 #perfil-container .columns .columna-derecha .burbujas-seguidores h3 {
   position: absolute;
-  top: 28%;
-  left: 50%;
-  transform: translate(-50%, -50%);
   font-family: "shaka-pow";
-  font-size: 25px;
+  font-size: 40px;
+  transform: translate(42%, 200%);
   z-index: 1;
-  text-shadow: 4px 4px 0 #8080807a;
+  text-shadow: 6px -5px 0 #8080807a;
 }
 #perfil-container .columns .columna-derecha .burbujas-seguidores .img-te-siguen {
   width: 75%;
   position: absolute;
-  top: 30%;
-  left: 50%;
-  transform: translate(-50%, -50%);
 }
 #perfil-container .columns .columna-derecha .contenedor-seguidores {
   padding: 20px 40px;
@@ -529,45 +508,38 @@ body {
   left: 50%;
   visibility: visible;
 }
-#perfil-container .columns .columna-derecha .burbujas-siguiendo {
+#perfil-container .columns .columna-derecha .burbujas-seguidos {
   position: relative;
   width: 100%;
   height: auto;
   cursor: pointer;
 }
-#perfil-container .columns .columna-derecha .burbujas-siguiendo .numero-que-sigues {
+#perfil-container .columns .columna-derecha .burbujas-seguidos .numero-que-sigues {
   position: absolute;
-  top: 10%;
-  left: 50%;
-  transform: translate(-50%, -80%);
   font-family: "shaka-pow";
-  font-size: 35px;
+  font-size: 40px;
+  transform: translate(600%, 185%);
   z-index: 1;
-  text-shadow: 4px 4px 0 #8080807a;
+  text-shadow: 3px 1px 0 #8080807a;
 }
-#perfil-container .columns .columna-derecha .burbujas-siguiendo h3 {
+#perfil-container .columns .columna-derecha .burbujas-seguidos h3 {
   position: absolute;
-  top: 28%;
-  left: 50%;
-  transform: translate(-50%, -50%);
   font-family: "shaka-pow";
-  font-size: 25px;
+  font-size: 40px;
+  transform: translate(42%, 200%);
   z-index: 1;
-  text-shadow: 4px 4px 0 #8080807a;
+  text-shadow: 6px -5px 0 #8080807a;
 }
-#perfil-container .columns .columna-derecha .burbujas-siguiendo .img-siguiendo {
+#perfil-container .columns .columna-derecha .burbujas-seguidos .img-siguiendo {
   width: 75%;
   position: absolute;
-  top: 30%;
-  left: 50%;
-  transform: translate(-50%, -50%);
 }
 #perfil-container .columns .columna-derecha .contenedor-siguiendo {
   padding: 20px 40px;
   position: fixed;
   z-index: 2;
   background-color: white;
-  background-image: url(../../img/fondosNiveles/fondoSiguiendo.jpg);
+  background-image: url(../../img/fondosNiveles/fondoSiguiendo.png);
   background-position: center;
   background-size: cover;
   -webkit-box-shadow: 0px 10px 19px 0px rgba(0, 0, 0, 0.75);
@@ -670,45 +642,6 @@ header h1 {
   display: none;
   visibility: hidden;
   opacity: 0;
-}
-
-/*------------NAVEGADOR-------------------*/
-.navegador-general {
-  display: flex;
-  flex-direction: column;
-  width: 90%;
-  background-color: #fede2c;
-  border-right: 6px solid #000000;
-  /*------------1.BOTONES-NAVEGACION-------------------*/
-}
-.navegador-general .boton-nav {
-  width: 80%;
-  height: auto;
-  margin: 15px 12px 13px 12px;
-  background-color: white;
-  border: 2px solid #000000;
-  box-shadow: 0px 10px 19px 0px #000000bf;
-  cursor: pointer;
-  transition: 0.5s;
-}
-.navegador-general .boton-nav h2 {
-  font-family: "shaka-pow";
-  font-size: 22px;
-  color: #000000;
-  text-shadow: 3px 2px 0 #00000038;
-  margin: 7px 5px;
-  text-align: center;
-}
-.navegador-general .boton-nav h2:hover {
-  color: wh;
-}
-.navegador-general .boton-nav a {
-  text-decoration: none;
-  color: #000000;
-}
-.navegador-general .boton-nav:hover {
-  background-color: #c052febf;
-  width: 85%;
 }
 
 /*# sourceMappingURL=main.css.map */
