--- a/styles/generals/_variables.scss
+++ b/styles/generals/_variables.scss
@@ -7,20 +7,37 @@
     // src: url("../../fonts/adventure/AdventureHollow.otf");
 }
 @font-face {
-    font-family: "para burbujas";
+    font-family: "shaka-pow";
     src: url("../../fonts/shaka_pow/Shaka\ Pow.ttf");
 }
+@font-face {
+    font-family: "badaboom";
+    src: url("../../fonts/badaboom_bb/BADABB__.TTF");
+}
+@font-face {
+    font-family: "avenger";
+    src: url("../../fonts/avengeance_mightiest_avenger/AVENGEANCE\ MIGHTIEST\ AVENGER.ttf");
+}
+@font-face {
+    font-family: "obelix";
+    src: url("../../fonts/obelixpro/ObelixPro-cyr.ttf");
+}
+// falto solamente  slapstik y chunky
 
 
 /*FONTS*/
 
 $title-font: "adventure";
-$bubble-font:"para burbujas";
+$bubble-font:"shaka-pow";
+$probando-una: "badaboom";
+$probando-dos: "avenger";
+$probando-tres: "obelix";
+
 
 
 /*FONTS SIZE*/
 
-$title-font-size: 175px;
+$title-font-size: 170px;
 
 /*COLORS*/
 
