--- a/styles/layout/_header.scss
+++ b/styles/layout/_header.scss
@@ -1,37 +1,44 @@
 
+// HEADER
+//1.IMAGEN ADA
+//2.TITULO JUEGO
+//3.NOTIFICACIONES
+
 /*------------HEADER-------------------*/
 
 header {
     width: 100%;
-    height: 170px;
+    height: 165px;
     display: flex;
     justify-content: center;
     background-color: $background-header-color;
     border: 5px solid $border-color;
 
+        /*------------ 1.IMAGEN ADA -------------------*/
 
-    .logotipo {
-        width: 210px;
-        height: 210px;
-        border-radius: 50%;
-        border: 2px solid $border-color;
-        box-shadow: 0px 10px 19px 0px #000000bf;
-        background-color: #ffffffde;
-        margin-left: 30px;
-        z-index: 1;
-
-        .contenedor-imagen {
-            width: 200px;
-            height: 200px;
+        .logotipo {
+            width: 210px;
+            height: 210px;
             border-radius: 50%;
-            background-image: url(../../img/ada.jpg);
-            background-position: center;
-            background-size: cover;
             border: 2px solid $border-color;
+            box-shadow: 0px 10px 19px 0px #000000bf;
+            background-color: #ffffffde;
+            margin-left: 30px;
+            z-index: 1;
+    
+            .contenedor-imagen {
+                width: 200px;
+                height: 200px;
+                border-radius: 50%;
+                background-image: url(../../img/ada.jpg);
+                background-position: center;
+                background-size: cover;
+                border: 2px solid $border-color;
+            }
+    
         }
 
-    }
-
+        /*------------ 2.TITULO JUEGO -------------------*/
 
     h1 {
         font-family: $title-font;
@@ -42,6 +49,9 @@ header {
     }
 
 }
+
+         /*------------3. NOTIFICACIONES -------------------*/
+
 #notificaciones {
     position: absolute;
     top: 127px;
