--- a/styles/layout/_nav.scss
+++ b/styles/layout/_nav.scss
@@ -1,4 +1,9 @@
 
+// NAVEGADOR
+//1.BOTONES-NAVEGACION
+
+
+/*------------NAVEGADOR-------------------*/
 
 .navegador-general {
     display: flex;
@@ -6,6 +11,8 @@
     width: 90%;
     background-color: #fede2c;
     border-right: 6px solid $border-color;
+
+    /*------------1.BOTONES-NAVEGACION-------------------*/
 
     .boton-nav {
         width: 80%;
@@ -15,19 +22,29 @@
         border: 2px solid $border-color; 
         box-shadow: 0px 10px 19px 0px #000000bf;
         cursor: pointer;
-
-        h2 {
-            font-family: $bubble-font;
-            font-size: 22px;
-            color: $border-color;
-            text-shadow: 3px 2px 0 #00000038; 
-            margin: 7px 5px;
-            text-align: center;
+        transition: .5s;
+        &:hover {
+            background-color: #c052febf;
+            width: 85%;
         }
 
         a {
             text-decoration: none;
-            color: $border-color;
+            color: none;
+
+            h2 {
+                font-family: $bubble-font;
+                font-size: 22px;
+                color: $border-color;
+                text-shadow: 3px 2px 0 #00000038; 
+                margin: 7px 5px;
+                text-align: center;
+                &:hover {
+                    color: white;
+                    font-size: 25px;
+                }
+            }
+
         }
 
     }
