--- a/styles/pages/_perfil.scss
+++ b/styles/pages/_perfil.scss
@@ -176,6 +176,7 @@ body {
                 opacity: 0;
                 top: 0%;
                 transition: .5s;
+                visibility: hidden;
 
                 .cerrar {
                     float: right;
@@ -257,6 +258,7 @@ body {
                 opacity: 0;
                 top: 0%;
                 transition: .5s;
+                visibility: hidden;
 
                 .cerrar {
                     float: right;
