--- a/css/main.css
+++ b/css/main.css
@@ -351,11 +351,132 @@ template {
   font-family: "badaboom";
   src: url("../../fonts/badaboom_bb/BADABB__.TTF");
 }
+@font-face {
+  font-family: "avenger";
+  src: url("../../fonts/avengeance_mightiest_avenger/AVENGEANCE MIGHTIEST AVENGER.ttf");
+}
+@font-face {
+  font-family: "obelix";
+  src: url("../../fonts/obelixpro/ObelixPro-cyr.ttf");
+}
 /*FONTS*/
 /*FONTS SIZE*/
 /*COLORS*/
 /*MEDIA QUERIES*/
 /*PAGES*/
+#home .columna-central {
+  width: 60%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-image: url(../../img/fondosNiveles/fondoNombrePerfil.jpg);
+  background-position: center;
+  background-size: cover;
+}
+#home .columna-central .contenedor-botones-home {
+  display: flex;
+  width: 90%;
+  height: 50%;
+  background-color: white;
+  border: 5px solid #000000;
+  box-shadow: 0px 10px 19px 0px rgba(0, 0, 0, 0.75);
+}
+#home .columna-central .contenedor-botones-home .contenedor-boton-jugar {
+  width: 36%;
+  height: auto;
+  background-color: #ff2ea1;
+  background-image: url("../../img/globosDialogo/botonjugar.png");
+  background-position: center;
+  background-size: cover;
+  border-right: 4px solid #000000;
+  cursor: pointer;
+  transition: 0.5s;
+}
+#home .columna-central .contenedor-botones-home .contenedor-boton-jugar:hover {
+  border: 2px solid #000000;
+  box-shadow: 0px 10px 19px 0px #000000bf;
+  width: 44%;
+}
+#home .columna-central .contenedor-botones-home .contenedor-boton-jugar h2 {
+  font-family: "avenger";
+  font-size: 25px;
+  vertical-align: cen;
+  vertical-align: middle;
+  text-align: center;
+  line-height: 200px;
+  vertical-align: ce;
+  margin: 0;
+}
+#home .columna-central .contenedor-botones-home .contenedor-boton-desafio {
+  width: 32%;
+  height: auto;
+  background-color: #2eceff;
+  background-image: url("../../img/globosDialogo/botondesafio.png");
+  background-position: center;
+  background-size: cover;
+  border-right: 4px solid #000000;
+  cursor: pointer;
+  transition: 0.5s;
+}
+#home .columna-central .contenedor-botones-home .contenedor-boton-desafio:hover {
+  border: 2px solid #000000;
+  box-shadow: 0px 10px 19px 0px #000000bf;
+  width: 40%;
+}
+#home .columna-central .contenedor-botones-home .contenedor-boton-desafio h2 {
+  font-family: "avenger";
+  font-size: 25px;
+  vertical-align: cen;
+  vertical-align: middle;
+  text-align: center;
+  line-height: 200px;
+  vertical-align: ce;
+  margin: 0;
+}
+#home .columna-central .contenedor-botones-home .contenedor-boton-competencia {
+  width: 32%;
+  height: auto;
+  background-color: #fff12e;
+  background-image: url("../../img/globosDialogo/botoncompetencia.png");
+  background-position: center;
+  background-size: cover;
+  cursor: pointer;
+  transition: 0.5s;
+}
+#home .columna-central .contenedor-botones-home .contenedor-boton-competencia:hover {
+  border: 2px solid #000000;
+  box-shadow: 0px 10px 19px 0px #000000bf;
+  width: 40%;
+}
+#home .columna-central .contenedor-botones-home .contenedor-boton-competencia h2 {
+  font-family: "avenger";
+  font-size: 25px;
+  vertical-align: cen;
+  vertical-align: middle;
+  text-align: center;
+  line-height: 200px;
+  vertical-align: ce;
+  margin: 0;
+}
+#home .perfil-home {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  background-image: url(../../img/fondosNiveles/nivel1.png);
+  background-position: center;
+  background-size: cover;
+  border-left: 6px solid #000000;
+}
+#home .perfil-home h2 {
+  margin: 0;
+  padding: 40px 10px 1px 10px;
+  font-family: "adventure";
+  font-size: 25px;
+  color: #000000;
+  text-shadow: 10px 5px 0 #93939369;
+}
+
 body {
   margin: 0;
 }
@@ -366,7 +487,7 @@ body {
 }
 #perfil-container #fondo {
   width: 100%;
-  height: auto;
+  height: 600px;
   background-image: url(../../img/fondosNiveles/nivel1.png);
   background-position: center;
   background-size: cover;
@@ -375,18 +496,19 @@ body {
 }
 #perfil-container .columns {
   width: 100%;
-  height: auto;
+  height: 600px;
   display: flex;
   flex-direction: row;
 }
 #perfil-container .columns .columna-izquierda {
   display: flex;
-  width: 15%;
-  background-color: #wh;
+  width: 20%;
+  background-color: white;
   border-right: 6px solid #000000;
+  box-shadow: 0px 10px 19px 0px rgba(0, 0, 0, 0.75);
 }
 #perfil-container .columns .columna-central {
-  width: 55%;
+  width: 60%;
   display: flex;
   flex-direction: column;
   overflow: hidden;
@@ -395,6 +517,7 @@ body {
   position: relative;
   top: -55px;
   transform: skewy(-7deg);
+  box-shadow: 0px 10px 19px 0px rgba(0, 0, 0, 0.75);
 }
 #perfil-container .columns .columna-central .datos-usuario #nombre-usuario {
   margin: 0;
@@ -402,7 +525,7 @@ body {
   font-family: "adventure";
   font-size: 120px;
   color: #000000;
-  background-image: url(../../img/fondosNiveles/fondoNombre.jpg);
+  background-image: url(../../img/fondosNiveles/fondoNombrePerfil.jpg);
   background-position: center;
   background-size: cover;
   text-shadow: 10px 5px 0 #93939369;
@@ -433,6 +556,7 @@ body {
   height: 45px;
   background-color: white;
   border: 2px solid #000000;
+  box-shadow: 0px 10px 19px 0px rgba(0, 0, 0, 0.75);
 }
 #perfil-container .columns .columna-central .datos-usuario .contenedor-nivel #nivel-usuario {
   font-family: "shaka-pow";
@@ -443,10 +567,19 @@ body {
   font-size: 30px;
 }
 #perfil-container .columns .columna-derecha {
-  width: 25%;
-  height: 500px;
+  display: flex;
+  width: 20%;
+  padding-left: 20px;
+  background-color: white;
+  border-left: 6px solid #000000;
+  box-shadow: 0px 10px 19px 0px rgba(0, 0, 0, 0.75);
+}
+#perfil-container .columns .columna-derecha .contenedor-burbujas {
   display: flex;
   flex-direction: column;
+  width: 100%;
+  background-color: #1cc763;
+  border-left: 6px solid #000000;
 }
 #perfil-container .columns .columna-derecha .burbujas-seguidores {
   position: relative;
@@ -455,23 +588,30 @@ body {
 }
 #perfil-container .columns .columna-derecha .burbujas-seguidores .numero-seguidores {
   position: absolute;
+  top: 20%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   font-family: "shaka-pow";
-  font-size: 40px;
-  transform: translate(600%, 185%);
+  font-size: 35px;
   z-index: 1;
-  text-shadow: 3px 1px 0 #8080807a;
+  text-shadow: 4px 4px 0 #8080807a;
 }
 #perfil-container .columns .columna-derecha .burbujas-seguidores h3 {
   position: absolute;
+  top: 28%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   font-family: "shaka-pow";
-  font-size: 40px;
-  transform: translate(42%, 200%);
+  font-size: 25px;
   z-index: 1;
-  text-shadow: 6px -5px 0 #8080807a;
+  text-shadow: 4px 4px 0 #8080807a;
 }
 #perfil-container .columns .columna-derecha .burbujas-seguidores .img-te-siguen {
   width: 75%;
   position: absolute;
+  top: 30%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 #perfil-container .columns .columna-derecha .contenedor-seguidores {
   padding: 20px 40px;
@@ -488,6 +628,7 @@ body {
   opacity: 0;
   top: 0%;
   transition: 0.5s;
+  visibility: hidden;
 }
 #perfil-container .columns .columna-derecha .contenedor-seguidores .cerrar {
   float: right;
@@ -508,38 +649,45 @@ body {
   left: 50%;
   visibility: visible;
 }
-#perfil-container .columns .columna-derecha .burbujas-seguidos {
+#perfil-container .columns .columna-derecha .burbujas-siguiendo {
   position: relative;
   width: 100%;
   height: auto;
   cursor: pointer;
 }
-#perfil-container .columns .columna-derecha .burbujas-seguidos .numero-que-sigues {
+#perfil-container .columns .columna-derecha .burbujas-siguiendo .numero-que-sigues {
   position: absolute;
+  top: 10%;
+  left: 50%;
+  transform: translate(-50%, -80%);
   font-family: "shaka-pow";
-  font-size: 40px;
-  transform: translate(600%, 185%);
+  font-size: 35px;
   z-index: 1;
-  text-shadow: 3px 1px 0 #8080807a;
+  text-shadow: 4px 4px 0 #8080807a;
 }
-#perfil-container .columns .columna-derecha .burbujas-seguidos h3 {
+#perfil-container .columns .columna-derecha .burbujas-siguiendo h3 {
   position: absolute;
+  top: 28%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   font-family: "shaka-pow";
-  font-size: 40px;
-  transform: translate(42%, 200%);
+  font-size: 25px;
   z-index: 1;
-  text-shadow: 6px -5px 0 #8080807a;
+  text-shadow: 4px 4px 0 #8080807a;
 }
-#perfil-container .columns .columna-derecha .burbujas-seguidos .img-siguiendo {
+#perfil-container .columns .columna-derecha .burbujas-siguiendo .img-siguiendo {
   width: 75%;
   position: absolute;
+  top: 30%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 #perfil-container .columns .columna-derecha .contenedor-siguiendo {
   padding: 20px 40px;
   position: fixed;
   z-index: 2;
   background-color: white;
-  background-image: url(../../img/fondosNiveles/fondoSiguiendo.png);
+  background-image: url(../../img/fondosNiveles/fondoSiguiendo.jpg);
   background-position: center;
   background-size: cover;
   -webkit-box-shadow: 0px 10px 19px 0px rgba(0, 0, 0, 0.75);
@@ -549,6 +697,7 @@ body {
   opacity: 0;
   top: 0%;
   transition: 0.5s;
+  visibility: hidden;
 }
 #perfil-container .columns .columna-derecha .contenedor-siguiendo .cerrar {
   float: right;
@@ -570,7 +719,103 @@ body {
   visibility: visible;
 }
 
+body {
+  margin: 0;
+}
+
+#login #login-container {
+  display: flex;
+}
+#login #login-container #fondo {
+  width: 100%;
+  height: 600px;
+  background-image: url(../../img/fondosNiveles/otro2.png);
+  background-position: center;
+  background-size: cover;
+  margin-top: 20px;
+  border: 5px solid #000000;
+}
+#login #login-container .columns {
+  width: 100%;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+}
+#login #login-container .columna-central {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 500px;
+}
+#login #login-container #contenedor-login {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 50%;
+  height: 100%;
+  background-image: url(../../img/globosDialogo/login2.png);
+  background-position: center;
+  background-size: cover;
+  z-index: 1;
+}
+#login #login-container #contenedor-login .contenedor-input {
+  display: flex;
+  flex-direction: column;
+  /* padding: 10px; */
+  line-height: 35px;
+  /* justify-content: center; */
+  /* align-items: center; */
+  position: absolute;
+  top: 50%;
+  left: 55%;
+  transform: translate(-50%, -50%);
+}
+#login #login-container #contenedor-signin {
+  display: flex;
+}
+#login #login-container .visible {
+  display: none;
+}
+
 /*COMPONENTS*/
+.boton-nav {
+  width: 80%;
+  height: auto;
+  margin: 15px 12px 13px 12px;
+  background-color: white;
+  border: 2px solid #000000;
+  box-shadow: 0px 10px 19px 0px #000000bf;
+  cursor: pointer;
+  transition: 0.5s;
+}
+.boton-nav:hover {
+  background-color: #c052febf;
+  width: 85%;
+}
+.boton-nav a {
+  text-decoration: none;
+  color: none;
+}
+.boton-nav a h2 {
+  font-family: "shaka-pow";
+  font-size: 22px;
+  color: #000000;
+  text-shadow: 3px 2px 0 #00000038;
+  margin: 7px 5px;
+  text-align: center;
+}
+.boton-nav a h2:hover {
+  color: white;
+  font-size: 23px;
+}
+
+input {
+  appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+}
+
 /*LAYOUT*/
 /*------------HEADER-------------------*/
 header {
@@ -642,6 +887,46 @@ header h1 {
   display: none;
   visibility: hidden;
   opacity: 0;
+}
+
+/*------------NAVEGADOR-------------------*/
+.navegador-general {
+  display: flex;
+  flex-direction: column;
+  width: 90%;
+  background-color: #fede2c;
+  border-right: 6px solid #000000;
+  /*------------1.BOTONES-NAVEGACION-------------------*/
+}
+.navegador-general .boton-nav {
+  width: 80%;
+  height: auto;
+  margin: 15px 12px 13px 12px;
+  background-color: white;
+  border: 2px solid #000000;
+  box-shadow: 0px 10px 19px 0px #000000bf;
+  cursor: pointer;
+  transition: 0.5s;
+}
+.navegador-general .boton-nav:hover {
+  background-color: #c052febf;
+  width: 85%;
+}
+.navegador-general .boton-nav a {
+  text-decoration: none;
+  color: none;
+}
+.navegador-general .boton-nav a h2 {
+  font-family: "shaka-pow";
+  font-size: 22px;
+  color: #000000;
+  text-shadow: 3px 2px 0 #00000038;
+  margin: 7px 5px;
+  text-align: center;
+}
+.navegador-general .boton-nav a h2:hover {
+  color: white;
+  font-size: 23px;
 }
 
 /*# sourceMappingURL=main.css.map */
