--- a/styles/pages/_home.scss
+++ b/styles/pages/_home.scss
@@ -112,83 +112,103 @@
     .perfil-home{      
         display: flex;
         flex-direction: column;
+        align-items: center;
         width: 100%;
         background-image: url(../../img/fondosNiveles/nivel1.png);
         background-position: center;
         background-size: cover;
         border-left: 6px solid $border-color;
 
-        h2 {
-            margin: 0;
-            padding: 40px 10px 1px 10px;
-            font-family: $title-font;
-            font-size: 25px;
-            color: $border-color;
-            text-shadow: 10px 5px 0 #93939369;
+        .contenedor-avatar {
+            width: 100%;
+            display: flex;
+            justify-content: center;
+            align-content: center;
+            align-items: center;
+            height: 240px;
+
+            #avatar {
+                width: 180px;
+                height: 180px;
+                border-radius: 50%;
+                background-image: url(../../img/avatares/mia.jpg);
+                background-position: center;
+                background-size: cover;
+                border: 2px solid $border-color;
+                box-shadow: 0px 10px 19px 0px #000000bf;
+            }
+
+        }
+
+        .datos-usuario {
+            width: 100%;
+            text-align: center;
+            transform: skewy(-7deg);
+            box-shadow: 0px 10px 19px 0px rgba(0, 0, 0, 0.75);
+        
+                #nombre-usuario {
+                    margin: 0;
+                    width: 85%;
+                    padding: 12px;
+                    font-family: "adventure";
+                    font-size: 30px;
+                    color: #000000;
+                    background-image: url(../../img/fondosNiveles/fondoNombrePerfil.jpg);
+                    background-position: center;
+                    background-size: cover;
+                    text-shadow: 10px 5px 0 #93939369;
+                    border: 8px solid #000000;
+                }
+
+                .contenedor-nivel { // aca es donde esta el numero del nivel
+                    position: absolute;
+                    transform: translateY(-38%);
+                    left: 30%;
+                    width: 160px;
+                    height: 45px;
+                    background-color: white;
+                    border: 2px solid $border-color; 
+                    box-shadow: 0px 10px 19px 0px rgba(0,0,0,0.75);
+
+                    #nivel-usuario {
+                        font-family: $bubble-font;
+                        margin: 5px;
+                        color: $border-color;
+                        text-shadow: 3px 2px 0 #00000038;
+                        font-size: 30px;
+                    }
+                }
+
+
+                h2 {
+                    margin: 0;
+                    padding: 2px;
+                    font-family: $title-font;
+                    font-size: 25px;
+                    color: $border-color;
+                    text-shadow: 10px 5px 0 #93939369;
+                }
+
+            .img-puntaje-usuario {
+                width: 300px;
+                height: auto;
+                position: absolute;
+                transform: translate(410px, -160px);
+            }
+    
+            #puntaje-usuario {
+                position: absolute;
+                font-family: $bubble-font;
+                font-size: 30px;
+                color: $border-color;
+                text-shadow: 3px 3px 0 #0000005e;
+                transform: translate(374%,-270%);
+                z-index: 1;
+            }
+
         }
         
     }
 
 }
-
-// .datos-usuario {
-//     position: relative;
-//     top: -55px;
-//     transform: skewy(-7deg);
-//     box-shadow: 0px 10px 19px 0px rgba(0,0,0,0.75);
-
-//     #nombre-usuario {
-//         margin: 0;
-//         padding: 40px 10px 1px 10px;
-//         font-family: $title-font;
-//         font-size: 120px;
-//         color: $border-color;
-//         background-image: url(../../img/fondosNiveles/fondoNombrePerfil.jpg);
-//         background-position: center;
-//         background-size: cover;
-//         text-shadow: 10px 5px 0 #93939369;
-//         border-bottom: 8px solid $border-color;
-//         border-top: 8px solid $border-color;
-//         border-right: 8px solid $border-color;
-//     }
-
-//     .img-puntaje-usuario {
-//         width: 300px;
-//         height: auto;
-//         position: absolute;
-//         transform: translate(410px, -160px);
-
-//     }
-
-//     #puntaje-usuario {
-//         position: absolute;
-//         font-family: $bubble-font;
-//         font-size: 30px;
-//         color: $border-color;
-//         text-shadow: 3px 3px 0 #0000005e;
-//         transform: translate(374%,-270%);
-//         z-index: 1;
-//     }
-
-//     .contenedor-nivel { // aca es donde esta el numero del nivel
-//         position: absolute;
-//         transform: translateY(-38%);
-//         left: 30%;
-//         width: 160px;
-//         height: 45px;
-//         background-color: white;
-//         border: 2px solid $border-color; 
-//         box-shadow: 0px 10px 19px 0px rgba(0,0,0,0.75);
-
-//         #nivel-usuario {
-//             font-family: $bubble-font;
-//             position: absolute;
-//             margin: 5px;
-//             color: $border-color;
-//             text-shadow: 3px 2px 0 #00000038;
-//             font-size: 30px;
-//         }
-//     }
-    
-// }
 
