--- a/styles/pages/_login.scss
+++ b/styles/pages/_login.scss
@@ -3,7 +3,7 @@
 
     #login-container {
         display: flex;
-        
+         
         #fondo {
             width: 100%;
             height: 600px;
@@ -13,6 +13,7 @@
             margin-top: 20px;
             border: 5px solid $border-color;
         }
+
         .columns {
             width: 100%;
             height: auto;
@@ -31,7 +32,8 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            width: 50%;
+            line-height: 30px;
+            width: 55%;
             height: 100%;
             background-image: url(../../img/globosDialogo/login2.png);
             background-position: center;
@@ -41,23 +43,98 @@
             .contenedor-input {
                 display: flex;
                 flex-direction: column;
+                justify-content: center;
+                align-items: center;
                 line-height: 35px;
                 position: absolute;
                 top: 45%;
                 left: 55%;
                 transform: translate(-50%,-50%);
+
             }
+
             .contenedor-usuario {
                 display: flex;
                 flex-direction: column;
+                justify-content: center;
+                align-items: center;
+
+                input {
+                    height: 30px;
+                    width: 80%;
+                    font-size: 20px;
+                }
             }
 
             .contenedor-password {
                 display: flex;
                 flex-direction: column;
+                justify-content: center;
+                align-items: center;
+
+                input {
+                    height: 30px;
+                    width: 80%;
+                    font-size: 20px;
+                }
 
             }
 
+            a {
+                font-family: $probando-tres;
+                font-size: 10px;
+                cursor: pointer;               
+            }
+
+            .boton-login {
+                width: 60%;
+                height: 30px;
+                margin: 15px 12px 13px 12px;
+                background-color: #fede2c; 
+                color: $border-color;
+                border: 0px solid $border-color; 
+                box-shadow: 0px 10px 19px 0px #000000bf;
+                cursor: pointer;
+                transition: .5s;
+                &:hover {
+                    background-color: #c052febf;
+                    width: 70%;
+                }
+
+                a {
+                    text-decoration: none;
+                    color: none;
+        
+                    button {
+                        font-family: $bubble-font;
+                        font-size: 22px;
+                        color: $border-color;
+                        text-shadow: 3px 2px 0 #00000038; 
+                        margin: 7px 5px;
+                        text-align: center;
+                        &:hover {
+                            color: white;
+                            font-size: 23px;
+
+                        }
+                    }
+        
+                }
+        
+            }
+
+        }
+        #abre-sigin {
+            font-size: 12px;
+            cursor: pointer;
+            transition: .2s;
+            &:hover {
+                border-bottom: 2px solid #c052febf;
+                color: #c052febf;
+            }
+            .fas {
+                font-size: 25px;
+            }
         }
 
         #contenedor-signin {
@@ -69,28 +146,9 @@
             display: none;
         }
 
-
     }
 
 
 }
 
-// #contenedor-login {
-//     display: flex;
-//     justify-content: center;
-//     align-items: center;
-//     width: 30%;
-//     height: 400px;
-//     background-color: white;
-//     border: 5px solid $border-color;
-//     box-shadow: 0px 10px 19px 0px #000000bf;
 
-//     .contenedor-input {
-//         width: 95%;
-//         height: 95%;
-//         background-color: white;
-//         border: 4px solid $border-color;
-//         box-shadow: 0px 10px 19px 0px #000000bf;
-//     }
-
-// }
